namespaces/live.cloud-platform.service.justice.gov.uk/track-a-query-qa/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: track-a-query-qa
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "qa"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-central-digital-product-team"
    cloud-platform.justice.gov.uk/application: "Track a Query"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: central-digital-product-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/correspondence_tool_staff"
